--- a/app/assets/stylesheets/partials/layout/navigation.scss
+++ b/app/assets/stylesheets/partials/layout/navigation.scss
@@ -14,7 +14,7 @@ nav {
 }
 
 .navbar-default, .navbar-toggle:focus, .collapsed, button.navbar-toggle {
-  background: $navbarColor !important;
+  // background: $navbarColor !important;
   border: none;
   a {
     color: white !important;
