--- a/app/assets/stylesheets/base/default.scss
+++ b/app/assets/stylesheets/base/default.scss
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  background: $backgroundColor;
+  background: #f0f0f0;     // $backgroundColor - file is not imported
   font-size: 14px;
   font-size: 1.4rem;
 }
