--- a/app/assets/stylesheets/partials/layout/navigation.scss
+++ b/app/assets/stylesheets/partials/layout/navigation.scss
@@ -15,6 +15,10 @@ nav {
       opacity: 0.8;
     }
   }
+
+  .col-sm-5, .col-sm-7 {
+    padding: 0;
+  }
 }
 
 .navbar-default, .navbar-toggle:focus, .collapsed, button.navbar-toggle {
@@ -23,4 +27,48 @@ nav {
   a {
     color: white !important;
   }
+}
+
+// responsiveness for mobile and laptop view
+.pc-menu {
+  margin-right: 10px;
+}
+
+.mobile-menu {
+  i {
+    color: white;
+  }
+  ul {
+    padding: 0px;
+  }
+  a {
+    display: block;
+    padding: 10px 0px 10px 25px !important;
+  }
+  a:hover {
+    background: white !important;
+    color: black !important;          // $navbarColor
+    i {
+      color: black;
+    }
+  }
+}
+
+.icon-bar {
+  background-color: white !important;
+}
+
+.active a {
+  background: black !important;
+  border-bottom: solid 5px white;
+}
+
+.dropdown-toggle, .dropdown-menu {
+  background: black !important;     // $navbarColor
+  border: none;
+}
+
+.dropdown-menu a:hover {
+  color: black !important;
+  background: white !important;
 }
