Configure and create helpers - Change include_all_helpers config to false - Split the _collapsible_elements.html.erb file's content into   partials and extract logic from the file into partials

--- a/app/assets/stylesheets/base/default.scss
+++ b/app/assets/stylesheets/base/default.scss
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  background: #f0f0f0;     // $backgroundColor - file is not imported
+  background: white;    // $backgroundColor
   font-size: 14px;
   font-size: 1.4rem;
 }
