--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,1 +1,13 @@
-<h1>Home page</h1>
+<div class="container">
+  <div class="row">
+    <div id="side-menu"  class="col-sm-3">
+    </div><!-- side-menu -->
+
+    <div id="main-content" class="col-sm-9">
+    </div><!-- main-content -->
+
+  </div><!-- row -->
+</div><!-- container -->
+
+
+<h1> hello </h1>
