Add CSS to posts on the home page - add CSS to the posts.scss file - add CSS to the mobile.scss to fix too large text issues on smaller screens

--- a/app/assets/stylesheets/responsive/mobile.scss
+++ b/app/assets/stylesheets/responsive/mobile.scss
@@ -6,4 +6,10 @@
   #side-menu {
     display: none !important;
   }
+  
+  .solid-color-mode, .border-color-mode {
+    .post-text {
+      font-size: 16px;  
+    }
+  }
 }
