Render a private conversation window on the app - Add opened conversations to the session - Create a _conversation.html.erb file inside private/conversations - Define a private_conv_recipient helper method in the   private/conversations_helper.rb - Define an opposed_user method in Private::Conversation model   and add specs for it - Create _heading.html.erb and _messages_list.html.erb files   inside the private/conversations/conversation - Define a load_private_messages in private/conversations_helper.rb   and add specs for it - Create a _new_message_form.html.erb inside the   private/conversations/conversation - Create a _open.js.erbinside private/conversations - Create a  position_and_visibility.js inside the   assets/javascripts/conversations - Create a  conversation_window.scss inside the   assets/stylesheets/partials - Define an opened_conversations_windows helper method in   ApplicationController - Create a _private_conversations_windows.html.erb inside the   layouts/application

--- a/app/assets/stylesheets/partials/posts/branch_page.scss
+++ b/app/assets/stylesheets/partials/posts/branch_page.scss
@@ -126,7 +126,7 @@ single-post-list {
 }
 
 .send-message-to-user {
-  background-color: $navbarColor;
+  background-color: black;    // $navbarColor
   padding: 10px;
   color: white;
   border-radius: 10px;
@@ -145,6 +145,6 @@ single-post-list {
   display: inline-block;
   border-radius: 10px;
   padding: 10px;
-  background-color: $navbarColor;
+  background-color: black;    // $navbarColor
   color: white;
 }
