--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,5 +16,6 @@
     <p class="alert"><%= alert %></p>
     <%= render 'layouts/navigation' %>
     <%= yield %>
+    <%= render "layouts/application/private_conversations_windows", private_conversations_windows: @private_conversations_windows %>
     </body>
 </html>
