--- a/app/assets/stylesheets/responsive/desktop.scss
+++ b/app/assets/stylesheets/responsive/desktop.scss
@@ -1,4 +1,8 @@
 @media screen and (min-width: 767px) {
+  // body {
+  //   background-color: red !important;
+  // }
+
   .mobile-menu {
     display: none !important;
   }
