--- a/app/assets/stylesheets/base/default.scss
+++ b/app/assets/stylesheets/base/default.scss
@@ -7,6 +7,7 @@ html {
 }
 
 body {
+  // background-color: red !important;
   background: whitesmoke;    // $backgroundColor
   font-size: 14px;
   font-size: 1.4rem;
