--- a/app/assets/stylesheets/responsive/mobile.scss
+++ b/app/assets/stylesheets/responsive/mobile.scss
@@ -1,4 +1,13 @@
 @media screen and (max-width: 767px) {
+  // body {
+  //   background-color: red !important;
+  // }
+
+  nav .navbar-header button {
+    background-color: white !important;
+    margin-right: 7px;
+  }
+
   .pc-menu {
     display: none !important;
   }
@@ -11,6 +20,12 @@
     .post-text {
       font-size: 16px;  
     }
+  }
+
+  .single-post-list {
+    min-height: 65px;
+    max-height: 65px;
+    padding: 10px 0;
   }
 }
 
@@ -25,26 +40,21 @@
       font-size: 20px;
       font-size: 2rem;
   }
+
   .new-post-button-parent {
     text-align: center;
     span {
       display: none !important;
     }
   }
+
   .post-button {
     padding: 5px;
   }
+
   .category-item {
     a {
       padding: 5px;
     }
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .single-post-list {
-    min-height: 65px;
-    max-height: 65px;
-    padding: 10px 0;
   }
 }
