--- a/app/views/layouts/navigation/_header.html.erb
+++ b/app/views/layouts/navigation/_header.html.erb
@@ -1,7 +1,7 @@
 <!-- Brand and toggle get grouped for better mobile display -->
 <div class="navbar-header">
   <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapsible-content" aria-expanded="false">
-    <span class="sr-only">Toggle navigation</span>
+    <span class="sr-only"></span>
     <span class="icon-bar"></span>
     <span class="icon-bar"></span>
     <span class="icon-bar"></span>
